k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moviesdb
  labels:
    app.kubernetes.io/name: moviesdb
    app.kubernetes.io/part-of: moviesdb
