k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviesdb-ingress
  namespace: moviesdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: moviesdb.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: moviesdb-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moviesdb-frontend
                port:
                  number: 80
